2011-03-15  Jonathan Nieder <jrnieder@gmail.com>

	* Free IFS state after here document expansion.
	* Use va_copy when reusing a va_list.

2011-03-15  Harald van Dijk <harald@gigawatt.nl>

	* Let funcnode refer to a function definition, not its first command.
	* Improve LINENO support.

2011-03-15  Brian Koropoff <bkoropoff@gmail.com>

	* Port to Solaris.

2011-03-11  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix backslash handling in read(1).

2011-03-10  Jonathan Nieder <jrnieder@gmail.com>

	* Dotcmd should exit with zero when doing nothing.

2011-03-10  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix CTLESC clobbering by read(1).

2011-03-10  Brian Koropoff <bkoropoff@gmail.com>

	* Port to AIX.

2011-03-10  Jilles Tjoelker <jilles@stack.nl>

	* Replace GPL noclobberopen code with the FreeBSD version.
	* Do not split the result of tilde expansion.

2010-11-28  Maciej Żenczykowski <zenczykowski@gmail.com>

	* Mark status as volatile in exitshell.

2010-11-28  Jonathan Nieder <jrnieder@gmail.com>

	* Use EXEXIT in place of EXEXEC.
	* Stop documenting EXSHELLPROC.

2010-11-28  Gerrit Pape <pape@smarden.org>

	* Use exit status 127 when the script to run does not exist.

2010-11-28  Philipp Weis <pweis@pweis.com>

	* Document optional open parenthesis for case patterns.

2010-11-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed trap/return regression due to SKIPEVAL removal.
	* Allow the originator of EXERROR to set the exit status.
	* Free IFS state in evalbackcmd.

2010-10-18  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix ifsfirst/ifslastp leak in casematch.

2010-10-07  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix EXEXEC status clobbering.

2010-09-08  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix ifsfirst/ifslastp leak.
	* Fix trailing field bug in read(1).

2010-09-08  maximilian attems <max@stro.at>

	* Debug compile fix.

2010-09-08  Jilles Tjoelker <jilles@stack.nl>

	* Fix varinit ordering that broke fc.
